--- a/overlay/vision/packages/apps/ROMControl/res/values/arrays.xml
+++ b/overlay/vision/packages/apps/ROMControl/res/values/arrays.xml
@@ -13,9 +13,10 @@
 		<item>DATA</item>
 		<item>2G</item>
 		<item>AP</item>
+		<item>TETHER</item>
 		<item>TORCH</item>
-        <item>SWAGGER</item>
-        <item>FCHARGE</item>
+                <item>SWAGGER</item>
+                <item>FCHARGE</item>
 	</string-array>
 	
 	<string-array name="available_toggles_values">
@@ -29,10 +30,11 @@
 		<item>Sync</item>
 		<item>Data</item>
 		<item>2G</item>
-		<item>Tethering (AP)</item>
+		<item>Wi-Fi Tether</item>
+		<item>USB Tether</item>
 		<item>Torch</item>
-        <item>Swagger</item>
-        <item>Fast charge</item>
+    	        <item>Swagger</item>
+                <item>Fast charge</item>
 	</string-array>
 
 </resources>
